# validator_struct

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/macros/: mod.rs  validator_struct.rs
src/utils/: metadata.rs  mod.rs  type_props.rs
tests/: derive.rs
validator_struct/: Cargo.toml
validator_struct/src/: lib.rs
validator_struct/tests/: derive.rs
validator_struct_derive/: Cargo.toml
validator_struct_derive/src/: lib.rs
