[package]
name = "validator_struct"
version = "0.2.0"
edition = "2021"
description = "A simple ergonomic addition to the validator crate"
authors = ["Søren H. Hansen"]
readme = "README.md"
repository = "https://github.com/SorenHolstHansen/validator_struct"
keywords = ["validator", "validation"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
validator = { version = "0.16.1", features = ["derive"] }
syn = { version = "2.0", features = ["parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
